--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -226,6 +226,14 @@
         </div>
     </div>
 
+<div class="share">
+
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
+
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&mobile_iframe=true&width=64&height=28&appId" width="64" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+</div>
+
 <div class="footer">
     <a href="#top" id="back-top"><span class="glyphicon glyphicon-eject"></span></a>
 </div>
