--- a/src/main/resources/static/searchPage.html
+++ b/src/main/resources/static/searchPage.html
@@ -33,22 +33,9 @@
     border: 1px solid #888;
     width: 80%;
     height: auto;
-    -webkit-animation-name: fadeIn;
-    -webkit-animation-duration: 0.6s;
-    animation-name: fadeIn;
-    animation-duration: 0.6s
+
     }
 
-    /* Add Animation */
-    @-webkit-keyframes fadeIn {
-    from {opacity: 0}
-    to {opacity: 1}
-    }
-
-    @keyframes fadeIn {
-    from {opacity: 0}
-    to {opacity: 1}
-    }
 
     /* The Close Button */
     .close {
@@ -152,7 +139,7 @@
 <body>
 <div id="upperlevel">
     <div class="uppersection" id="homesection">
-        <button class="upperbtn" type="button" class="homebtn">
+        <button class="upperbtn" type="button" id="homebtn">
             <span class="glyphicon glyphicon-home"></span> Home
         </button>
     </div>
@@ -198,18 +185,18 @@
                 </div>
             </div>
         </div>
-        <!-- The Modal -->
-        <div class="grids" id="grids">
-            <div id="myModal" class="modal">
-                <!-- Modal content -->
-                <div class="modal-content">
-                    <span class="close">CLOSE</span>
-                    <h1 style="border-bottom: 4px solid #e3ae24">POSSIBLE DISEASE</h1>
-                    <ul id="diseaseList" class="grids" style="margin-left: 5px">
+    </div>
+</div>
+<!-- The Modal -->
+<div class="grids" id="grids">
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">CLOSE</span>
+            <h1 style="border-bottom: 4px solid #e3ae24">POSSIBLE DISEASE</h1>
+            <ul id="diseaseList" class="grids" style="margin-left: 5px">
 
-                    </ul>
-                </div>
-            </div>
+            </ul>
         </div>
     </div>
 </div>
@@ -279,7 +266,9 @@ $(document).ready(function(e){
 		$('.search-panel span#search_concept').text(concept);
 		$('.input-group #search_param').val(param);
 	});
-
+    $("#homebtn").click(function() {
+        window.location.replace('/ModePage');
+    });
 });
 
 function search() {
