--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -11,19 +11,20 @@
 
 <style>
     .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     }
-     /*  Content */
+    /*  Content */
     .modal-content {
-    background-color: #1aa8b9;
+    background-color: lightcyan;
+    color: #777;
     margin: auto;
     padding: 20px;
     padding-bottom: 10%;
@@ -35,289 +36,239 @@
     animation-name: fadeIn;
     animation-duration: 0.6s
     }
-
     /* Add Animation */
     @-webkit-keyframes fadeIn {
     from {opacity: 0}
     to {opacity: 1}
     }
-
     @keyframes fadeIn {
     from {opacity: 0}
     to {opacity: 1}
     }
+
     body {
-        background-color: #1aa8a8;
-        margin: 0 auto;
+    background-color: lightcyan;
+    margin: 0 auto;
     }
     .upperbtn {
-        background-color: #0d57a0;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: 1px groove #cccccc;
-        border-radius: 5px;
-        cursor: pointer;
-        width: 50%;
+    background-color: #4DB6AC;
+    border-radius: 5px;
+    color: white;
+    float:left;
+    width: 120px;
+    height: 30px;
+    padding:
+    5px 5px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
     }
     .upperbtn:hover{
-        color: #42a5f5;
-        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
-        transition: box-shadow 1s,text-shadow 1s,color 1s;
-
+    color: #42a5f5;
+    box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
+    transition: box-shadow 1s,text-shadow 1s,color 1s;
     }
-
     #upperlevel {
-        width: 100%;
-        height: 300px;
-        text-align: center;
+    width: 100%;
+    height: 200px;
+    text-align: center;
     }
-
     #imgcontainer {
-        position:relative;
-        margin-left:auto;
-        margin-right: auto;
-        width: 400px;
-        height:200px;
+    position:relative;
+    margin-left:auto;
+    margin-right: auto;
+    width: 400px;
+    height:200px;
     }
-
     img.logo {
-        display: block;
-        margin-left: auto;
-        margin-right: auto
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto
     }
-
     #greeting_box{
-
-        text-align: center;
-        color:black;
-        font-size:45px;
-        font-family:Impact,serif;
-
-        bottom:0;
-
+    text-align: center;
+    color:black;
+    font-size:45px;
+    font-family:Impact,serif;
+    bottom:0;
     }
-
     #middle {
-
-        text-align: center;
-        width: 100%;
-        height:500px;
-        margin: 20px auto;
+    text-align: center;
+    width: 100%;
+    height:500px;
+    margin: 20px auto;
     }
     #middleblock_left{
-        background-color:rgba(3, 155, 229,0.5);
-
-        margin-left:20px;
-        margin-right:20px;
-
-
-        padding:20px 100px;
-
-        text-align: center;
-        height:100%;
-        width: 31%;
-
-        border: 1px solid rgba(0,0,0,0.12);
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
-        border-radius:3px;
-
-        float:left;
+    /*background-color:rgba(3, 155, 229,0.5);*/
+    margin-left:20px;
+    margin-right:20px;
+    padding:20px 60px;
+    text-align: center;
+    height:100%;
+    width: 31%;
+    border: 1px solid rgba(0,0,0,0.08);
+    font-family:"RooneySans-Bold", "Lucida Grande", "Lucida Sans Unicode", "Trebuchet MS", sans-serif;
+    float:left;
     }
-
     #middleblock_mid{
-        background-color:rgba(3, 155, 229,0.5);
-
-
-        float:left;
-        text-align: center;
-
-        height:100%;
-        width: 31%;
-        padding:20px 100px;
-
-        border: 1px solid rgba(0,0,0,0.12);
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
-        border-radius:3px;
-
+    /*background-color:rgba(3, 155, 229,0.5);*/
+    float:left;
+    text-align: center;
+    height:100%;
+    width: 31%;
+    padding:20px 100px;
+    border: 1px solid rgba(0,0,0,0.08);
     }
-
     #middleblock_right{
-        background-color:rgba(3, 155, 229,0.5);
-
-
-        margin-left:20px;
-        margin-right:20px;
-        padding:20px 100px;
-
-        text-align: center;
-        height:100%;
-        width: 32%;
-
-        border: 1px solid rgba(0,0,0,0.12);
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
-        border-radius:3px;
-        float:left;
-
+    /*background-color:rgba(3, 155, 229,0.5);*/
+    margin-left:20px;
+    margin-right:20px;
+    padding:20px 100px;
+    text-align: center;
+    height:100%;
+    width: 32%;
+    border: 1px solid rgba(0,0,0,0.08);
+    float:left;
     }
     .mid_titles{
-        color: black;
-        font-size:30px;
-        font-weight: bold;
-        font-family: 'Arial Black',sans-serif
+    color: #777;
+    font-size:30px;
+    font-weight: bold;
+    font-family:"RooneySans-Bold", "Lucida Grande", "Lucida Sans Unicode", "Trebuchet MS", sans-serif;
     }
-
     #footer{
-        margin: 5px auto;
-        bottom:0;
-        width:100%;
-
-        position:relative;
-
+    margin: 5px auto;
+    bottom:0;
+    width:100%;
+    position:relative;
     }
-
     /*#usersection {*/
-        /*width: 240px;*/
-        /*height: 123px;*/
-        /*float: right;*/
+    /*width: 240px;*/
+    /*height: 123px;*/
+    /*float: right;*/
     /*}*/
-
-    .upperbtn {
-        background-color: #0d57a0;
-        color: white;
-        float:left;
-        width: 120px;
-        height: 30px;
-        padding:
-                5px 5px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-    }
-
     #changeBtn1 {
-
-        margin-top: 60px;
-        margin-bottom:40px;
-
-        color:white;
-        background-color:#055f95;
-        border: hidden;
-        display: inline-block;
-        transition: all 0.5s;
-        cursor: pointer;
+    margin-top: 80px;
+    margin-bottom:20px;
+    color:white;
+    background-color:#4DB6AC;
+    border: hidden;
+    display: inline-block;
+    transition: all 0.5s;
+    cursor: pointer;
     }
     #changeBtn1 span{
-        cursor:pointer;
-        display: inline-block;
-        position:relative;
-        transition:0.5s;
+    cursor:pointer;
+    display: inline-block;
+    position:relative;
+    transition:0.5s;
     }
     #changeBtn1 span:after {
-        content: '»';
-        position: absolute;
-        opacity: 0;
-        top: 0;
-        right: -10%;
-        transition: 0.5s;
+    content: '»';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -10%;
+    transition: 0.5s;
     }
     #changeBtn1:hover span {
-        padding-right: 15px;
+    padding-right: 15px;
     }
-
     #changeBtn1:hover span:after {
-        opacity: 1;
-        right: 0;
+    opacity: 1;
+    right: 0;
     }
-
     #changeBtn2 {
-
-
-        margin-top:40px;
-
-        color:white;
-        background-color:#055f95;
-        border: hidden;
-
-        display: inline-block;
-        transition: all 0.5s;
-        cursor: pointer;
+    margin-top:40px;
+    color:white;
+    background-color:#4DB6AC;
+    border: hidden;
+    display: inline-block;
+    transition: all 0.5s;
+    cursor: pointer;
     }
     #changeBtn2 span{
-        cursor:pointer;
-        display: inline-block;
-        position:relative;
-        transition:0.5s;
+    cursor:pointer;
+    display: inline-block;
+    position:relative;
+    transition:0.5s;
     }
     #changeBtn2 span:after {
-        content: '»';
-        position: absolute;
-        opacity: 0;
-        top: 0;
-        right: -10%;
-        transition: 0.5s;
+    content: '»';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -10%;
+    transition: 0.5s;
     }
     #changeBtn2:hover span {
-        padding-right: 15px;
+    padding-right: 15px;
     }
-
     #changeBtn2:hover span:after {
-        opacity: 1;
-        right: 0;
+    opacity: 1;
+    right: 0;
     }
-
     #back-top {
-        position: fixed;
-        display:none;
-        font-size: 50px;
-        color: rgba(0,0,0,0.5);
-        bottom: 5px;
-        right:30px;
-        width:auto;
+    position: fixed;
+    display:none;
+    font-size: 50px;
+    color: rgba(0,0,0,0.5);
+    bottom: 5px;
+    right:30px;
+    width:auto;
     }
     a#back-top:active {
-        background:none;
+    background:none;
     }
     a#back-top {
-        display: block; text-decoration: none;
+    display: block; text-decoration: none;
     }
     .topup {
-        bottom:5px;
+    bottom:5px;
     }
     #back-top i {
-        display: block;
+    display: block;
     }
-
-
     dd{
-        color: #fefefe;
-        font-size:17px;
-        font-family:"Lucida Sans Typewriter",monospace;
+    background-color: #eff0f1;
+    color: #4DB6AC;
+    font-size:17px;
     }
-
-
-
-</style>
+    dt+dt{
+    border-top: 1px solid rgba(255,255,255,0.6);
+    padding-top: 5px;
+    }
+    table{
+    margin-top: 20%;
+    color: #777;
+    font-size:30px;
+    width:100%;
+    }
+    td{
+    text-align: left;
+    padding-top:0.5em;
+    padding-bottom: 0.5em;
+    }
+    .lines{
+    border-top: 1px #9E9E9E solid;
+    }
+    </style>
 <body>
 
 <div id="upperlevel">
 
-        <button class="upperbtn" type="button" onclick="add()">
-            <span class="glyphicon glyphicon-home"></span> Home
-        </button>
-
+    <button class="upperbtn" type="button" id="homebtn">
+        <span class="glyphicon glyphicon-home"></span> Home
+    </button>
 
     <div id = "imgcontainer">
-        <img class="logo" src="logo2.jpg" alt="logo"  style="
+        <img class="logo" src="canvas.png" alt="logo"  style="
         width: 240px;
         height: 200px;
         ">
     </div >
 
-    <div id = "greeting_box">
-        <span>Welcome to home, </span>
-    </div>
+
 </div>
 
 
@@ -327,7 +278,7 @@
     <div id ="middleblock_left">
 
         <span class="glyphicon glyphicon-user" style="
-        color: black;
+        color: #777;
         font-size:30px;
         font-weight: bold;
         "></span>
@@ -335,32 +286,27 @@
             Account
         </span>
 
-<<<<<<< HEAD
         <table>
             <tr>
                 <td id="userID"></td>
             </tr>
-=======
 
-        <dl>
-            <dt style="color: #fefefe;margin-top: 1cm;font-size: 23px; ">ID:</dt>
-            <dd id="userID"></dd>
-            <h2 id="id"></h2>
-            <dt style="color: #fefefe;margin-top: 1cm;font-size: 23px">Email:</dt>
-            <dd id="email" ></dd>
->>>>>>> 14de692c045d473539595347af3574e67a8b63e3
+            <tr class="lines">
+                <td>Email:</td>
+            </tr>
+            <tr id="email"style="text-align: left"></tr>
 
-            <dt style="color: #fefefe;margin-top: 1cm;font-size: 23px">Authority:</dt>
-            <dd id="Aut" ></dd>
-        </dl>
-
-
+            <tr class="lines">
+                <td>Authority:</td>
+            </tr>
+            <tr id="Aut" style="text-align: left"></tr>
+        </table>
     </div>
 
     <div id ="middleblock_mid">
 
         <span class="glyphicon glyphicon-cog" style="
-        color: black;
+        color: #777;
         font-size:30px;
         font-weight: bold;
         "></span>
@@ -375,7 +321,7 @@
         </button>
 
         <!--<a href="/ChangePassword" target="_blank">-->
-            <!--Change your password-->
+        <!--Change your password-->
         <!--</a>-->
 
 
@@ -384,14 +330,14 @@
         </button>
 
         <!--<a href="/ChangeEmail" target="_blamk">-->
-            <!--Change your Email-->
+        <!--Change your Email-->
         <!--</a>-->
 
     </div>
 
     <div id ="middleblock_right">
         <span class="glyphicon glyphicon-list-alt" style="
-        color: black;
+        color: #777;
         font-size:30px;
         font-weight: bold;
         "></span>
@@ -402,9 +348,10 @@
 
         <!--<h1 style="color: #fefefe;margin-top: 1.5cm;font-size: large">Articles</h1>-->
         <h2 id="Artical" style="color: #fefefe;margin-top: 1.5cm;font-size: large"></h2>
-        <ul id="articles" style="color:#fefefe">
+        <ul id="articles" style="color:#777; text-align: left; font-size:16px">
         </ul>
     </div>
+
     <div class="modal" id="my-modify-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-content" style="width: 800px;height:auto;margin-left: auto;margin-right: auto;margin-top: 120px;">
             <div class="modal-body">
@@ -426,9 +373,9 @@
 <div id="footer" >
 
     <!--<div style="margin-left: 90%">-->
-        <!--<a href="#top">-->
-            <!--<img border="0" src="up_arrow.png" />-->
-        <!--</a>-->
+    <!--<a href="#top">-->
+    <!--<img border="0" src="up_arrow.png" />-->
+    <!--</a>-->
     <!--</div>-->
     <a href="#top" id="back-top"><span class="glyphicon glyphicon-eject"></span></a>
 
@@ -439,14 +386,12 @@
 
 <script>
     function add(){
-
         window.location.replace('/ModePage');
     }
 </script>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
-
     var flag = 1;
     function getCookie(c_name)
     {
@@ -473,23 +418,18 @@
 //    } else {
 //        userbtn.appendChild(document.createTextNode('Login'));
 //    }
-
-    var greeting = document.getElementById('greeting_box');
-    if (greeting != "") {
-
-        greeting.appendChild(document.createTextNode(username));
-        greeting.appendChild(document.createTextNode('!'));
-    }
-
-
-
+//    var greeting = document.getElementById('greeting_box');
+//    if (greeting != "") {
+//
+//        greeting.appendChild(document.createTextNode(username));
+//        greeting.appendChild(document.createTextNode('!'));
+//    }
     //--
     var g;
     var res;
     var obj2 = {};
     obj2.username = username;
     $(function(callback) {
-
         res = $.ajax({
             url: '/UserPage',
             type: 'POST',
@@ -502,15 +442,13 @@
             error: function (error) {
                 console.log(error);
             }
-
         })
         var res = res.done(function(result) {
             console.log(res.responseText);
             var obj = JSON.parse(res.responseText);
             //document.getElementById("id").innerHTML=obj.username
-            document.getElementById("userID").innerHTML = obj.id;
+            document.getElementById("userID").innerHTML = "ID: "+obj.id;
             document.getElementById("email").innerHTML = obj.email
-
             if(obj.authority == 0) {
                 document.getElementById("Aut").innerHTML = "User";
             }
@@ -524,15 +462,9 @@
         });
     });
     $(document).ready(function(){
-
-
         $("h1").delay("1000").fadeIn();
-
-
         // hide #back-top first
         $("#back-top").hide();
-
-
         // fade in #back-top
         $(function () {
             $(window).scroll(function () {
@@ -540,11 +472,8 @@
                     $('#back-top').fadeIn();
                 } else {
                     $('#back-top').fadeOut();
-
                 }
             });
-
-
             // scroll body to 0px on click
             $('a#back-top').click(function () {
                 $('body,html').animate({
@@ -553,10 +482,17 @@
                 return false;
             });
         });
-
-
+        $("#homebtn").click(function() {
+            window.location.replace('/ModePage');
+        });
+        $("#changeBtn1").click(function() {
+            window.location.replace('/ChangePassword');
+        });
+        $("#changeBtn2").click(function() {
+            window.location.replace('/ChangeEmail');
+        });
     });
-                    console.log(flag);
+    console.log(flag);
     if(flag==1) {
 
         var obj3 = {};
@@ -579,7 +515,7 @@
             })
             var res = res.done(function(result) {
                 var length = result.length;
-                for (var a=0; a<length-1;a++) {
+                for (var a=0; a<length;a++) {
                     console.log(result);
 
                     var articleList = document.getElementById("articles");
@@ -589,12 +525,8 @@
                     span.value = result[a].content;
                     span.setAttribute("name", result[a].title);
                     span.setAttribute("author", result[a].authorName);
-
                     span.setAttribute("time", result[a].timeStamp);
-
                     span.name = result[a].title;
-                    console.log(result[a].content);
-                    //btn.appendChild(a);
                     span.appendChild(document.createTextNode(result[a].title));
 
                     li.appendChild(span);
@@ -606,7 +538,7 @@
                 var modal = document.getElementById("my-modify-modal");
 
                 $("#articles").find("span").click(function() {
-                console.log("success3333");
+                    console.log("success3333");
                     var tagText = $(this).val();
                     console.log("success444");
                     var articleTitle = document.getElementById("titleH2");
@@ -630,7 +562,6 @@
             });
         });
     }
-
 </script>
 
 </html>
